src/main/java/com/example/postBlog/error/JwtException.java
package com.example.postBlog.error;

public class JwtException extends Exception {
    
}
